force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Subscription_Compact_Layout</compactLayoutAssignment>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB#{0000000}</displayFormat>
        <label>Sub Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>