force-app/main/default/objects/Subscription__c/fields/ACS__c.field-meta.xml
<CustomField>
    <fullName>ACS__c</fullName>
    <formula
  >IF( Publication__r.Name = &quot;GOVERNING&quot;, IF( Publication__r.Name = &quot;GOVERNING&quot;, &quot;BXBKGMD&quot;, &quot;&quot;),
IF( Publication__r.Name = &quot;Government Technology&quot;, IF( Publication__r.Name = &quot;Government Technology&quot;, &quot;BXNQCRW&quot;, &quot;&quot;),
IF( Publication__r.Name = &quot;Emergency Management&quot;, IF( Publication__r.Name = &quot;Emergency Management&quot;, &quot;BYNQRCZ&quot;, &quot;&quot;),
IF( Publication__r.Name = &quot;Public CIO&quot;, IF( Publication__r.Name = &quot;Public CIO&quot;, &quot;BXNQCST&quot;, &quot;&quot;),
&quot;&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACS#</label>
    <type>Text</type>
</CustomField>