force-app/main/default/objects/Subscription__c/fields/Archive_Mag_Sub__c.field-meta.xml
<CustomField>
    <fullName>Archive_Mag_Sub__c</fullName>
    <description
  >Subscription number from converted Mag Subscription object</description>
    <label>Archive Mag Sub #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>