force-app/main/default/objects/Subscription__c/fields/Archive_Mag_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>Archive_Mag_Sub_ID__c</fullName>
    <description
  >Subscription ID from converted Mag Subscription object</description>
    <label>Archive Mag Sub ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>