force-app/main/default/objects/Subscription__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description
  >Indicates the number of the batch that the source documents are kept in for auditing.</description>
    <inlineHelpText
  >Indicates the number of the batch that the source documents are kept in for auditing.</inlineHelpText>
    <label>Batch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>