force-app/main/default/objects/Subscription__c/fields/BPA_Qual_Year__c.field-meta.xml
<CustomField>
    <fullName>BPA_Qual_Year__c</fullName>
    <formula
  >IF ( Qual_Date__c &gt;= ( Publication__r.Audit_Cycle_Date__c - 365),&quot;1 Year&quot;, 
(IF ( Qual_Date__c &gt;= ( Publication__r.Audit_Cycle_Date__c - 730),&quot;2 Year&quot;, 
(IF ( Qual_Date__c &gt;= ( Publication__r.Audit_Cycle_Date__c - 1095),&quot;3 Year&quot;,
(IF ( Qual_Date__c &gt;= ( Publication__r.Audit_Cycle_Date__c - 1460),&quot;4 Year&quot;, 
&quot;5 Year&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BPA Qual Year</label>
    <type>Text</type>
</CustomField>