force-app/main/default/objects/Subscription__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Reason for the cancellation of the subscription.</description>
    <inlineHelpText
  >Reason for the cancellation of the subscription.</inlineHelpText>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAD ADDRESS</fullName>
                <label>Bad Address</label>
            </value>
            <value>
                <fullName>BAD EMAIL</fullName>
                <label>Bad Email</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Customer Request</label>
            </value>
            <value>
                <fullName>DECEASED</fullName>
                <label>Deceased</label>
            </value>
            <value>
                <fullName>DUP</fullName>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>No longer works at organization</fullName>
            </value>
            <value>
                <fullName>PUB</fullName>
                <label>Publisher</label>
            </value>
            <value>
                <fullName>RETIRED</fullName>
                <label>Retired</label>
            </value>
            <value>
                <fullName>Bad Email (Global Opt Out)</fullName>
            </value>
            <value>
                <fullName>Bad Email (Missing Email)</fullName>
            </value>
            <value>
                <fullName>Bad Email (Hard Bounce)</fullName>
            </value>
            <value>
                <fullName>Bad Email (Inactive Email)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>