force-app/main/default/objects/Subscription__c/fields/Contact_Email_Group_Digital_Ed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Group_Digital_Ed__c</fullName>
    <formula>TEXT ( Subscriber__r.Email_Group_Circ_GT_Digital_Ed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Group: Digital Ed</label>
    <type>Text</type>
</CustomField>