force-app/main/default/objects/Subscription__c/fields/Contact_Email_Hard_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Hard_Bounce__c</fullName>
    <formula>Subscriber__r.Email_Hard_Bounce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>