force-app/main/default/objects/Subscription__c/fields/Contact_Email_Opt_Out_Removal_Needed__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Opt_Out_Removal_Needed__c</fullName>
    <formula>Subscriber__r.Email_Opt_Out_Removal_Needed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Opt Out Removal Needed</label>
    <type>Checkbox</type>
</CustomField>