force-app/main/default/objects/Subscription__c/fields/Contact_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Inactive_Reason__c</fullName>
    <formula>TEXT( Subscriber__r.Inactive_Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Inactive Reason</label>
    <type>Text</type>
</CustomField>