force-app/main/default/objects/Subscription__c/fields/GOV_Paid_Issues_Remaining__c.field-meta.xml
<CustomField>
    <fullName>GOV_Paid_Issues_Remaining__c</fullName>
    <description
  >Formula displays the roll-up summary of the GOV Paid Issues Remaining field on the Subscriber (Contact Record).</description>
    <formula>Subscriber__r.GOV_Paid_Issues_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Formula displays the roll-up summary of the GOV Paid Issues Remaining field on the Subscriber (Contact Record).</inlineHelpText>
    <label>GOV Paid Issues Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>