force-app/main/default/objects/Subscription__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <description
  >Promotional code used to track incoming subscription requests.</description>
    <inlineHelpText
  >Promotional code used to track incoming subscription requests.</inlineHelpText>
    <label>Promo Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>