force-app/main/default/objects/Subscription__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <description
  >Indicates the publication that this is a subscription for.</description>
    <inlineHelpText
  >Indicates the publication that this is a subscription for.</inlineHelpText>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>