force-app/main/default/objects/Subscription__c/fields/Publication_Name__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name__c</fullName>
    <formula>Publication__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publication Name</label>
    <type>Text</type>
</CustomField>