force-app/main/default/objects/Subscription__c/fields/Qual__c.field-meta.xml
<CustomField>
    <fullName>Qual__c</fullName>
    <description>Qualification status of the subscription.</description>
    <inlineHelpText>Qualification status of the subscription.</inlineHelpText>
    <label>Qual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>Non-Requestor</fullName>
            </value>
            <value>
                <fullName>Paid Requestor</fullName>
            </value>
            <value>
                <fullName>Lifetime Requestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>