force-app/main/default/objects/Subscription__c/fields/Qual_Date__c.field-meta.xml
<CustomField>
    <fullName>Qual_Date__c</fullName>
    <description>Date of the incoming subscription request.</description>
    <inlineHelpText>Date of the incoming subscription request.</inlineHelpText>
    <label>Qual Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>