force-app/main/default/objects/Subscription__c/fields/Record_Type_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Lookup__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type (Lookup)</label>
    <type>Text</type>
</CustomField>