force-app/main/default/objects/Subscription__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates the source of the subscription.</description>
    <inlineHelpText>Indicates the source of the subscription.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1A</fullName>
            </value>
            <value>
                <fullName>1B</fullName>
            </value>
            <value>
                <fullName>1C</fullName>
            </value>
            <value>
                <fullName>2A</fullName>
            </value>
            <value>
                <fullName>2B</fullName>
            </value>
            <value>
                <fullName>2C</fullName>
            </value>
            <value>
                <fullName>3A</fullName>
            </value>
            <value>
                <fullName>3B</fullName>
            </value>
            <value>
                <fullName>4A</fullName>
            </value>
            <value>
                <fullName>4B</fullName>
            </value>
            <value>
                <fullName>4C</fullName>
            </value>
            <value>
                <fullName>5A</fullName>
            </value>
            <value>
                <fullName>5B</fullName>
            </value>
            <value>
                <fullName>5C</fullName>
            </value>
            <value>
                <fullName>5D</fullName>
            </value>
            <value>
                <fullName>5E</fullName>
            </value>
            <value>
                <fullName>5F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>