force-app/main/default/objects/Subscription__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This is the contact record that this subscription is associated with.</description>
    <inlineHelpText
  >This is the contact record that this subscription is associated with.</inlineHelpText>
    <label>Subscriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>