force-app/main/default/objects/Subscription__c/fields/Subscriber_Email__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Email__c</fullName>
    <formula>Subscriber__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber Email</label>
    <type>Text</type>
</CustomField>