force-app/main/default/objects/Subscription__c/fields/Subscription_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Age_Days__c</fullName>
    <formula>TODAY() - Qual_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>