force-app/main/default/objects/Subscription__c/fields/Subscription_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Age_Years__c</fullName>
    <formula>IF ( Qual_Date__c &gt;= ( TODAY() - 365),&quot;1 Year&quot;,
(IF ( Qual_Date__c &gt;= ( TODAY() - 730),&quot;2 Year&quot;,
(IF ( Qual_Date__c &gt;= ( TODAY() - 1095),&quot;3 Year&quot;,
(IF ( Qual_Date__c &gt;= ( TODAY() - 1460),&quot;4 Year&quot;,
&quot;5 Year&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Age (Years)</label>
    <type>Text</type>
</CustomField>