force-app/main/default/objects/Subscription__c/fields/Sync_with_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Sync_with_HubSpot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync with HubSpot</label>
    <type>Checkbox</type>
</CustomField>