force-app/main/default/objects/Subscription__c/fields/TM_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>TM_Call_Time__c</fullName>
    <label>TM Call Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>