force-app/main/default/objects/Subscription__c/fields/TM_Dialer_ID__c.field-meta.xml
<CustomField>
    <fullName>TM_Dialer_ID__c</fullName>
    <description
  >The ID of the telemarketing transaction for the subscription.</description>
    <inlineHelpText
  >The ID of the telemarketing transaction for the subscription.</inlineHelpText>
    <label>TM Dialer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>