force-app/main/default/objects/Subscription__c/fields/TM_Rep__c.field-meta.xml
<CustomField>
    <fullName>TM_Rep__c</fullName>
    <description
  >Code for Telemarketing Representative who fielded the call.</description>
    <inlineHelpText
  >Code for Telemarketing Representative who fielded the call.</inlineHelpText>
    <label>TM Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>