force-app/main/default/objects/Subscription__c/fields/TM_Spoke_to_Name__c.field-meta.xml
<CustomField>
    <fullName>TM_Spoke_to_Name__c</fullName>
    <description
  >The name of the person the telemarketing rep spoke to.</description>
    <inlineHelpText
  >The name of the person the telemarketing rep spoke to.</inlineHelpText>
    <label>TM Spoke to Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>