force-app/main/default/objects/Subscription__c/fields/TM_Vendor__c.field-meta.xml
<CustomField>
    <fullName>TM_Vendor__c</fullName>
    <description>Name of the telemarketing company.</description>
    <inlineHelpText>Name of the telemarketing company.</inlineHelpText>
    <label>TM Vendor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>