force-app/main/default/objects/Subscription__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description
  >This is the transaction ID identifying the unique web submission record from the form system.</description>
    <inlineHelpText
  >This is the transaction ID identifying the unique web submission record from the form system.</inlineHelpText>
    <label>Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>