force-app/main/default/objects/Subscription__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description
  >Indicates the delivery version for this subscription.</description>
    <inlineHelpText
  >Indicates the delivery version for this subscription.</inlineHelpText>
    <label>Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>D</fullName>
                <isActive>false</isActive>
                <label>D</label>
            </value>
            <value>
                <fullName>No Comp</fullName>
                <isActive>false</isActive>
                <label>No Comp</label>
            </value>
            <value>
                <fullName>Non-Requestor</fullName>
                <isActive>false</isActive>
                <label>Non-Requestor</label>
            </value>
            <value>
                <fullName>P</fullName>
                <isActive>false</isActive>
                <label>P</label>
            </value>
            <value>
                <fullName>P - Print</fullName>
                <isActive>false</isActive>
                <label>P - Print</label>
            </value>
            <value>
                <fullName>Prev</fullName>
                <isActive>false</isActive>
                <label>Prev</label>
            </value>
            <value>
                <fullName>Printrint</fullName>
                <isActive>false</isActive>
                <label>Printrint</label>
            </value>
            <value>
                <fullName>Removed</fullName>
                <isActive>false</isActive>
                <label>Removed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>