force-app/main/default/objects/Subscription__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <description>The source of the record from our website.</description>
    <inlineHelpText>The source of the record from our website.</inlineHelpText>
    <label>Web Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>