force-app/main/default/objects/Subscription__c/recordTypes/Comp_Sub.recordType-meta.xml
<RecordType>
    <fullName>Comp_Sub</fullName>
    <active>true</active>
    <compactLayoutAssignment
  >Subscription_Compact_Layout</compactLayoutAssignment>
    <description>Complimentary sales subscription.</description>
    <label>Comp Sub</label>
</RecordType>