force-app/main/default/objects/Subscription__c/recordTypes/Qualified_Sub.recordType-meta.xml
<RecordType>
    <fullName>Qualified_Sub</fullName>
    <active>true</active>
    <compactLayoutAssignment
  >Subscription_Compact_Layout</compactLayoutAssignment>
    <description
  >Standard subscription for audited and non-audited publications.</description>
    <label>Qualified Sub</label>
</RecordType>