force-app/main/default/objects/Subscription__c/validationRules/Cannot_Cancel_a_Lifetime_Requestor.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_a_Lifetime_Requestor</fullName>
    <active>true</active>
    <description
  >Prevents a subscription with a qual of &quot;Lifetime Requestor&quot; from being set to Cancelled or Expired.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Qual__c,&quot;Lifetime Requestor&quot;),

OR(ISPICKVAL(Status__c,&quot;Cancelled&quot;),ISPICKVAL(Status__c,&quot;Expired&quot;))

)</errorConditionFormula>
    <errorMessage
  >You cannot cancel or expire a subscription with a Qual of Lifetime Requestor.</errorMessage>
</ValidationRule>