force-app/main/default/objects/Subscription__c/listViews/Internal_Magazine_Subscriptions.listView-meta.xml
<ListView>
    <fullName>Internal_Magazine_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>Subscriber__c</columns>
    <columns>Status__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>Version__c</columns>
    <columns>Contact_Email_Group_Digital_Ed__c</columns>
    <columns>Contact_Email_Hard_Bounce__c</columns>
    <columns>Contact_Email_Opt_Out__c</columns>
    <columns>Contact_Email_Opt_Out_Removal_Needed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Publication__c</field>
        <operation>equals</operation>
        <value>government technology</value>
    </filters>
    <filters>
        <field>Version__c</field>
        <operation>equals</operation>
        <value>Print,Both</value>
    </filters>
    <label>Internal Magazine Subscriptions</label>
</ListView>