force-app/main/default/objects/Subscription__c/listViews/Subs_w_inactive_contacts_Comp.listView-meta.xml
<ListView>
    <fullName>Subs_w_inactive_contacts_Comp</fullName>
    <columns>NAME</columns>
    <columns>Subscriber__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Inactive_Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>inactive</value>
    </filters>
    <filters>
        <field>Publication__c</field>
        <operation>equals</operation>
        <value>government technology</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Subscription__c.Comp_Sub</value>
    </filters>
    <label>Subs w/ inactive contacts - Comp</label>
</ListView>