force-app/main/default/objects/Subscription__c/listViews/Subs_w_invalid_emails_Main.listView-meta.xml
<ListView>
    <fullName>Subs_w_invalid_emails_Main</fullName>
    <booleanFilter
  >1 AND 3 AND 4 AND 5 AND (2 OR  6 OR 7 OR (8 AND 9) )</booleanFilter>
    <columns>NAME</columns>
    <columns>Subscriber__c</columns>
    <columns>Qual_Date__c</columns>
    <columns>Subscription_Age_Days__c</columns>
    <columns>Status__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Inactive_Reason__c</columns>
    <columns>Version__c</columns>
    <columns>Subscriber_Email__c</columns>
    <columns>Contact_Mailing_Country__c</columns>
    <columns>Contact_Email_Group_Digital_Ed__c</columns>
    <columns>Contact_Email_Hard_Bounce__c</columns>
    <columns>Contact_Email_Opt_Out__c</columns>
    <columns>Contact_Email_Opt_Out_Removal_Needed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>inactive</value>
    </filters>
    <filters>
        <field>Publication__c</field>
        <operation>equals</operation>
        <value>government technology</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Subscription__c.Qualified_Sub</value>
    </filters>
    <filters>
        <field>Version__c</field>
        <operation>equals</operation>
        <value>Digital</value>
    </filters>
    <filters>
        <field>Contact_Email_Group_Digital_Ed__c</field>
        <operation>startsWith</operation>
        <value>Unsubscribed</value>
    </filters>
    <filters>
        <field>Contact_Email_Hard_Bounce__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_Email_Opt_Out__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Contact_Email_Opt_Out_Removal_Needed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Subs w/ invalid emails  - Main</label>
</ListView>